syntax = "proto3";

package maptool;

option java_multiple_files = true;
option java_package = "net.rptools.maptool.model.library.proto";
option java_outer_classname = "LibraryProtos";


message AddOnLibraryDto {
  string name = 17;
  string version = 18;
  string website = 19;
  string git_url = 20;
  repeated string authors = 21;
  string license = 22;
  string namespace = 23;
  string description = 24;
  string short_description = 25;
  bool allowsUriAccess = 26;
  string license_file = 27;
  string read_me_file = 28;
}

message MTScriptPropertiesDto {
  message Property {
    string filename = 1;
    bool auto_execute = 2;
    string description = 3;
  }

  repeated Property properties = 1;
}

message AddOnLibraryListDto {
  message AddOnLibraryEntryDto {
    AddOnLibraryDto details = 17;
    string md5_hash = 18;
  }
  repeated AddOnLibraryEntryDto libraries = 1;
}

message AddOnLibraryEventsDto {
  message Events {
    string name = 1;
    string mts = 2;
    string js = 3;
  }
  repeated Events events = 1;
  repeated Events legacy_events = 2;
}

message AddOnStatSheetsDto {
  message AddOnStatSheet {
    string name = 1;
    string description = 2;
    string entry = 4;
    string namespace = 7;
    repeated string  property_types = 8;
  }

  repeated AddOnStatSheet stat_sheets = 1;
}

message AddonSlashCommandsDto {
  message AddOnSlashCommand {
    string name = 1;
    string description = 2;
    string command = 3;
  }
  repeated AddOnSlashCommand slash_commands = 1;
}